--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Stopwatch</title>
 </head>
 <body>
     <div class="container">
        <div class="time-display">
-            <span id="hours" class="hours">00</span>:<span id="minutes" class="minutes">00</span>:<span id="seconds" class="seconds">00</span>
+            <span class="hours">00</span>:<span class="minutes">00</span>:<span class="seconds">00</span>
         </div>
         <div class="text-container">
             <h3>HOURS</h3>
@@ -20,7 +20,11 @@
             <button class="btn start-button">Start</button>
             <button class="btn stop-button">Stop</button>
             <button class="btn reset-button">Reset</button>
-
+            <button class="btn lap-button">Lap</button>
+        </div>
+        <div class="lap-container">
+            <h3>Lap Times</h3>
+            <ul class="lap-list"></ul>
         </div>
     </div>
     <script src="script.js"></script>
